fixed z-index

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2828,7 +2828,6 @@ justify-content: space-between;
   height: 100%;
   gap: .5rem;
   width: 100%;
-  z-index: 1000;
  }
  .list-content__progress {
   width: 50%;
